Modified Show action for BasicModel

--- a/views/notes.erb
+++ b/views/notes.erb
@@ -1,8 +1,8 @@
 <h2>All notes</h2>
 <ul class="note-list">
-<% for note in @notes %>
-    <li><%= link_to note['value']['title'], "/notes/#{note['value']['_id']}" %> |
-    <%= link_to 'edit', "/notes/#{note['value']['_id']}/edit" %></li>
+<% for note in @notes.rows %>
+    <li><%= link_to note.title, "/notes/#{note.id}" %> |
+    <%= link_to 'edit', "/notes/#{note.id}/edit" %></li>
 <% end %>
 </ul>
 <p><%= link_to 'Back to home', '/' %></p>
