Added a tag view (much help from PeepCode Eps 23)

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,6 +19,7 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/notes">Notes</a></li>
+                        <li><a href="/tags">Tags</a></li>
                     </ul>
                 </div> <!-- end PageNav -->
             </div> <!-- end Header -->
