--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,7 @@
                 <div id="page-nav">
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/notes">Notes</a></li>
+                        <li><a href="/sections">Sections</a></li>
                         <li><a href="/tags">Tags</a></li>
                     </ul>
                 </div> <!-- end PageNav -->
