Refactored views a bit and added support for editing notebooks

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,4 +7,10 @@
         <%= submit "Submit" %>
     </form>
 </div>
+<ul id="notebook-listing">
+    <% for notebook in @notebooks %>
+        <li><%= link_to notebook.topic, "/notebooks/#{notebook.id}" %> |
+            <%= link_to 'edit', "/notebooks/#{notebook.id}/edit" %></li>
+    <% end %>
+</ul>
 <p><%= link_to 'View all sections', '/sections' %></p>
