--- a/views/section_edit.erb
+++ b/views/section_edit.erb
@@ -8,3 +8,5 @@
         <%= submit "Submit" %>
     </form>
 </div>
+
+<%# Add a select widget for available notebooks so that a section can be moved to another notebook %>
