--- a/views/tag_index.erb
+++ b/views/tag_index.erb
@@ -1,6 +1,6 @@
 <h2>All Tags</h2>
 <ul>
-<% for tag_group in @tags.rows %>
+<% for tag_group in @tags %>
     <li><%= tag_group.tag %> (<%= tag_group.total %>)</li>
 <% end %>
 </ul>
