Added section view by tags and minor visual updates

--- a/views/notebook_edit.erb
+++ b/views/notebook_edit.erb
@@ -6,5 +6,6 @@
         <%= submit "Submit" %>
     </form>
 </div>
+<p><%= link_to '&larr; Back to notebook', "/notebooks/#{@notebook.id}" %></p>
 
 <%# Is it necessary to make sure the topics are unique? %>
