--- a/views/section_edit.erb
+++ b/views/section_edit.erb
@@ -16,5 +16,6 @@
         <%= submit "Submit" %>
     </form>
 </div>
+<p><%= link_to '&larr; Back to section', "/sections/#{@section.id}" %></p>
 
 <%# Add a select widget for available notebooks so that a section can be moved to another notebook %>
