--- a/views/section_show.erb
+++ b/views/section_show.erb
@@ -4,4 +4,4 @@
     <small><strong>Tags:</strong> <%= @section.tags.join(', ') %></small><br />
     <small><strong>Modified:</strong> <%= @section.updated_at %></small>
 </p>
-<p><%= link_to 'All sections', '/sections' %></p>
+<p><%= link_to '&larr; All sections', '/sections' %></p>
