--- a/views/notebook_show.erb
+++ b/views/notebook_show.erb
@@ -19,6 +19,4 @@
         <%= submit "Submit" %>
     </form>
 </div>
-<p><%= link_to 'Home', '/' %></p>
-
-<%# Add a form for a new section here. Give the form a hidden field for notebook.topic %>
+<p><%= link_to '&larr; Back to home', '/' %></p>
