--- a/views/section_index.erb
+++ b/views/section_index.erb
@@ -5,4 +5,4 @@
     <%= link_to 'edit', "/sections/#{section.id}/edit" %></li>
 <% end %>
 </ul>
-<p><%= link_to 'Back to home', '/' %></p>
+<p><%= link_to '&larr; Back to home', '/' %></p>
