--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,11 @@
   	    
   	    <link rel="stylesheet" href="/base.css" type="text/css" media="all" />  	    
   	    <link rel="stylesheet" href="/style.css" type="text/css" media="all" />  	    
+  	    <!--
   	    <script type="text/javascript" src="/jquery-1.3.min.js"></script>
+  	    <script type="text/javascript" src="/jquery.ui.all.min.js"></script>
+  	    <script type="text/javascript" src="/app.js"></script>
+        -->
 	</head>
 
 	<body>
