--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,7 +31,7 @@
 	  	        <%= yield %>
 	  	    </div> <!-- end Content -->
 	  	    <div id="footer">
-	  	        <p class="copyright"><strong>&copy; 2009.</strong> Leroy Campbell.</p>
+	  	        <p class="copyright"><strong>&copy; 2009</strong></p>
 	  	    </div> <!-- end Footer -->
         </div> <!-- end Wrap -->
 	</body>
